--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "firebase": "1.0.x",
     "firebase-simple-login": "1.6.x",
     "angularfire": "0.8.x",
-    "mockfirebase": "0.2.x"
+    "mockfirebase": "0.2.x",
+    "angular-animate": "~1.2.x"
   }
 }
